Fixed bad assertion and failure to undo removeAllAssistants.

KisAssistantTool::removeAllAssistants function wasn't making correct use
of EditAssistantsCommand. EditAssistantsCommand also contained a flawed and
unnecessary assertion.

Thanks for the help Eoin.

BUG:419189